feat: move role/user init to Flyway (V3-V5), remove SystemDataInitializer