@@ -1,5 +1,6 @@
 package io.github.jiangood.openadmin.modules.system.repository;
 
+import io.github.jiangood.openadmin.framework.data.specification.Spec;
 import io.github.jiangood.openadmin.modules.system.entity.SysUser;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -7,7 +8,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -46,12 +46,11 @@ public class SysUserRepositoryTest {
 
     @Test
     void testBasicCrudOperations() {
-        SysUser foundUser = sysUserRepository.findOne(testUser1.getId());
+        SysUser foundUser = sysUserRepository.findById(testUser1.getId()).orElse(null);
         assertNotNull(foundUser);
         assertEquals(testUser1.getAccount(), foundUser.getAccount());
 
-        String[] ids = {testUser1.getId(), testUser2.getId()};
-        List<SysUser> foundUsers = sysUserRepository.findAllById(ids);
+        List<SysUser> foundUsers = sysUserRepository.findAllById(List.of(testUser1.getId(), testUser2.getId()));
         assertEquals(2, foundUsers.size());
 
         long countBefore = sysUserRepository.count();
@@ -65,7 +64,7 @@ public class SysUserRepositoryTest {
         assertEquals(countBefore + 1, sysUserRepository.count());
 
         sysUserRepository.delete(savedUser);
-        SysUser deletedUser = sysUserRepository.findOne(savedUser.getId());
+        SysUser deletedUser = sysUserRepository.findById(savedUser.getId()).orElse(null);
         assertNull(deletedUser);
     }
 
@@ -95,56 +94,35 @@ public class SysUserRepositoryTest {
 
     @Test
     void testFindAllByEnabledTrueAndIdIn() {
-        List<String> ids = Arrays.asList(testUser1.getId());
+        List<String> ids = List.of(testUser1.getId());
         List<SysUser> foundUsers = sysUserRepository.findAllByEnabledTrueAndIdIn(ids);
         assertEquals(1, foundUsers.size());
         assertEquals("test_admin", foundUsers.get(0).getAccount());
     }
 
     @Test
-    void testBatchOperations() {
-        SysUser user3 = new SysUser();
-        user3.setAccount("user3");
-        user3.setPassword("123456");
-        user3.setName("用户3");
-        user3.setEnabled(true);
-
-        SysUser user4 = new SysUser();
-        user4.setAccount("user4");
-        user4.setPassword("123456");
-        user4.setName("用户4");
-        user4.setEnabled(true);
-
-        List<SysUser> batchUsers = Arrays.asList(user3, user4);
-        List<SysUser> savedBatchUsers = sysUserRepository.saveAllBatch(batchUsers);
-        assertEquals(2, savedBatchUsers.size());
-        assertNotNull(savedBatchUsers.get(0).getId());
-        assertNotNull(savedBatchUsers.get(1).getId());
-
-        List<String> idsToDelete = Arrays.asList(user3.getId(), user4.getId());
-        long countBefore = sysUserRepository.count();
-        sysUserRepository.deleteAllBatch(idsToDelete);
-        assertEquals(countBefore - 2, sysUserRepository.count());
-    }
-
-    @Test
-    void testUpdateFieldMethods() {
+    void testUpdateField() {
         testUser1.setName("管理员更新");
         testUser1.setPhone("13800138001");
-        sysUserRepository.updateField(testUser1, Arrays.asList("name", "phone"));
 
-        SysUser updatedUser = sysUserRepository.findOne(testUser1.getId());
+        SysUser db = sysUserRepository.findById(testUser1.getId()).orElse(null);
+        db.setName(testUser1.getName());
+        db.setPhone(testUser1.getPhone());
+        sysUserRepository.save(db);
+
+        SysUser updatedUser = sysUserRepository.findById(testUser1.getId()).orElse(null);
         assertNotNull(updatedUser);
         assertEquals("管理员更新", updatedUser.getName());
         assertEquals("13800138001", updatedUser.getPhone());
+    }
 
-        testUser1.setName("管理员直接更新");
-        testUser1.setEmail("admin_updated@example.com");
-        sysUserRepository.updateFieldDirect(testUser1, Arrays.asList("name", "email"));
+    @Test
+    void testFieldQueryMethods() {
+        SysUser foundByPhone = sysUserRepository.findOne(Spec.<SysUser>of().eq("phone", "13800138000")).orElse(null);
+        assertNotNull(foundByPhone);
+        assertEquals("测试管理员", foundByPhone.getName());
 
-        SysUser directlyUpdatedUser = sysUserRepository.findOne(testUser1.getId());
-        assertNotNull(directlyUpdatedUser);
-        assertEquals("管理员直接更新", directlyUpdatedUser.getName());
-        assertEquals("admin_updated@example.com", directlyUpdatedUser.getEmail());
+        List<SysUser> enabledUsers = sysUserRepository.findAll(Spec.<SysUser>of().eq("enabled", true));
+        assertTrue(enabledUsers.size() >= 2);
     }
 }
